sppech recognizer added

--- a/whisper.ipynb
+++ b/whisper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e80f236c",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
     }
    ],
    "source": [
-    "pip install -U openai-whisper"
+    "# pip install -U openai-whisper"
    ]
   },
   {
